Fix some layout issues

--- a/sass/Partials/_colors.scss
+++ b/sass/Partials/_colors.scss
@@ -29,6 +29,9 @@
 	}
 }
 
+.black_bg {
+	background-color: black;
+}
 	
 /* ==========================================
 	Shop - Color
