--- a/sass/Partials/_images.scss
+++ b/sass/Partials/_images.scss
@@ -3,14 +3,6 @@
 	Background-img
 ====================================== */
 
-html { 
-	height: 100%;
-  background: url("../img/bg.JPG") no-repeat center center fixed; 
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-}
 
 
 /* ==========================================
