--- a/sass/Partials/_layout.scss
+++ b/sass/Partials/_layout.scss
@@ -32,6 +32,7 @@ img {
 	h1 {
 		float: left;
 		margin-left: 6%;
+
 		
 		
 			
@@ -44,7 +45,7 @@ img {
 		float: right;
 		clear: right;
 		margin-right: 10%;
-		margin-top: 35px;
+		margin-top: 25px;
 
 		
 		
@@ -272,7 +273,7 @@ section {
 		
 		p {
 			padding-bottom: 15px;
-			margin-top: 130px;
+			margin-top: 75px;
 		}
 	}
 
